# planetboundmass

./: .gitignore  README.md  Untitled.ipynb  boundmass.py  pyproject.toml  setup.py  sw_planet_tools.py  tutorial.ipynb
Noteable/: requirements.txt
planetboundmass/: CMakeLists.txt  SWIFT_funcs.py  __init__.py  binding.cpp  bound.cpp  bound.h  boundmass.py  sw_planet_tools.py
src/planetboundmass/: __init__.py  sw_planet_tools.py
